app/styles/theme/new/nw-general.scss
/* Positioning */

.nw-flex-center {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.nw-absolute {
  position:absolute;
  top:0;
  left: 0;
}

.nw-column-cards {
  display: grid;
  grid-gap: 20px;
}

/* Sizing squares */

.nw-square-80 {
  width: 80px;
  height: 80px;
}

.nw-square-24 {
  width: 24px;
  height: 24px;
}

/* Fonts */

.nw-project-name {
  font-family: 'SerifRegular', serif;
  color: #005555;
  font-size: 16px;
  font-weight: bold;
  line-height: 22px;
}

.nw-user-name {
  font-size: 18px;
  font-weight: bold;
  line-height: 22px;
  a {
    color: #000;
  }
}

/* Buttons */

.nw-round-icon-button {
  width: 36px;
  height: 36px;
  background-image: linear-gradient(to top, #055555, #188162);
  border: solid #fff 0px;
  border-radius: 18px;
  &:hover {
  }
  .fa {
    font-size: 20px;
    line-height: 16px;
    margin-top: -3px;
  }
}

.nw-new-button {
  height: 36px;
  background-image: linear-gradient(to top, #055555, #188162);
  border: solid #fff 0px;
  border-radius: 6px;
  &:hover {
  }
  .fa {
    font-size: 20px;
    line-height: 16px;
    margin-top: -3px;
  }
}

/* General settings */

.nw-drop-shadow {
  filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.3));
}

@keyframes highlight {
  0% {
    filter: drop-shadow(0px 0px 7px rgba(0,255,0,1.0));
  }
  100% {
    filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.3));
  }
}

.nw-highlight-shadow {
  animation: highlight 2s;
}

.nw-hide {
  display: none;
}

